# flac2opus

./: LICENSE  README.md  flac2opus.cabal  flac2opus.hs
app/: Main.hs  flac2opus.hs
src/: Lib.hs
